tests/algorithms/x/Elixir/web_programming/slack_message.exs
# Code generated by Mochi transpiler 2025-08-11 15:32 +0700
defmodule Main do
  defp _bench_now() do
    System.monotonic_time(:microsecond)
  end
  defp _mem() do
    :erlang.process_info(self(), :memory) |> elem(1)
  end
  defp _fetch(url) do
    {out, 0} = System.cmd("curl", ["-fsSL", url])
    s = String.trim(out)
    case String.split(s, "\"title\":\"") do
      [_, rest] ->
        case String.split(rest, "\"") do
          [title | _] -> title
          _ -> ""
        end
      _ -> ""
    end
  end
  def send_slack_message(message_body, slack_url) do
    try do
      headers = %{"Content-Type" => "application/json"}
      response = _fetch(slack_url)
      if response != "ok" do
        raise(("Request to slack returned an error: " <> response))
      end
      throw {:return, response}
    catch
      {:return, val} -> val
    end
  end
  Process.put(:url, "https://httpbin.org/post")
  def main() do
    :erlang.garbage_collect()
    mem_start = _mem()
    t_start = _bench_now()
    send_slack_message("Hello from Mochi", Process.get(:url))
    IO.puts("Message sent")
    mem_end = _mem()
    duration_us = max(_bench_now() - t_start, 1)
    :erlang.garbage_collect()
    mem_diff = abs(mem_end - mem_start)
    IO.puts("{\n  \"duration_us\": #{duration_us},\n  \"memory_bytes\": #{mem_diff},\n  \"name\": \"main\"\n}")
  end
end
Main.main()
